* Advanced configuration exposed for search engine type, runtime mode, and Same-Site cookie policy.  See the link:/docs/v1/tech/reference/configuration[Configuration] documentation for reference.
* Updated default CORS configuration for clean installs, see the link:/docs/v1/tech/reference/cors#default-configuration[CORS Reference] for details.
* Lots more, additional release notes and documentation updates will be coming soon.

=== Internal
* The FusionAuth Java runtime has been upgraded to version 14. All external Java packages such as the Java REST client and the Plugin interface are all still compiled against Java 8 so this upgrade should not impact any users.
* Upgrade Apache Tomcat to the latest patch version
* Much smaller Docker images based upon Alpine Linux

[role=release-note]

== Version 1.15.8
_April 10th, 2020_

=== Fixed
* When more than one tenant is defined, the redirect to `/oauth2/callback` which is used for 3rd Party SAML v2 or OpenId Connect identity providers will fail unless the corresponding application is in the default tenant. This issue was introduced in `1.15.6` which means it only affects version `1.15.6`. If you encounter this issue you may be shown an error on the login page indicating `A validation error occurred during the login attempt. An event log was created for the administrator to review.`.
** Resolves https://github.com/FusionAuth/fusionauth-issues/issues/548[GitHub Issue #548], thanks so much to https://github.com/lamuertepeluda[@lamuertepeluda] for reporting and providing excellent technical details to assist in tracking down the bug.
* A callback from a Social IdP configuration may fail to complete the login workflow. This issue was introduced in `1.15.6` which means it only affects version `1.15.6` and `1.15.7`.
** Resolves https://github.com/FusionAuth/fusionauth-issues/issues/553[GitHub Issue #553], thanks to https://github.com/ulybu[@ulybu] for reporting the issue!

=== Enhancements