@@ -45,6 +45,10 @@
           "enabled": true,
           "transactionType": "None"
         },
+        "jwt.refresh": {
+          "enabled": true,
+          "transactionType": "None"
+        },
         "jwt.refresh-token.revoke": {
           "enabled": true,
           "transactionType": "None"
