@@ -46,6 +46,10 @@
             "enabled": true,
             "transactionType": "None"
           },
+          "jwt.refresh": {
+            "enabled": true,
+            "transactionType": "None"
+          },
           "jwt.refresh-token.revoke": {
             "enabled": true,
             "transactionType": "None"
