@@ -14,4 +14,5 @@
 * ``user.registration.verified`` - When a user completes registration verification [since]#Available Since 1.8.0#
 * ``user.delete`` - When a user is deleted
 * ``jwt.public-key.update`` - When a JWT RSA Public / Private keypair may have been changed
+* ``jwt.refresh`` - When an access token is refreshed using a refresh token [since]#Available Since 1.16.0#
 * ``jwt.refresh-token.revoke`` - When a JWT Refresh Token is revoked
