@@ -260,11 +260,17 @@ include::docs/v1/tech/apis/_x-fusionauth-tenant-id-header-scoped-operation.adoc[
 [field]#refresh_token# [type]#[String]# [optional]#Optional#::
 The refresh token to be used to obtain a new access token.
 
+[field]#access_token# [type]#[String]# [optional]#Optional#::
+The previously issued encoded access token.  When provided on the request, this value will be relayed in the related JWT Refresh webhook event within the `original` field.
+
 ==== Request Body
 
 [.api]
 [field]#refreshToken# [type]#[String]# [optional]#Optional#::
 The refresh token to be used to obtain a new access token.
+
+[field]#token# [type]#[String]# [optional]#Optional#::
+The previously issued encoded access token.  When provided on the request, this value will be relayed in the related JWT Refresh webhook event within the `original` field.
 
 [source,json]
 .Example Request JSON
