@@ -24,6 +24,7 @@ These are the events that FusionAuth generates that can be optionally consumed b
 * <<User Registration Delete>> - when a user registration is deleted
 * <<User Registration Verified>> - when a user completes registration verification
 * <<JWT Public Key Update>> - when a JWT RSA Public / Private keypair used for signing may have been updated.
+* <<JWT Refresh>> - when an access token is refreshed using a refresh token
 * <<JWT Refresh Token Revoke>> - when a refresh token (or multiple tokens) are revoked
 
 
@@ -73,7 +74,7 @@ This parameter will indicate if FusionAuth has already sent an email to the user
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the action will expire, if the action expires.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.localizedAction# [type]#[String]#::
 This parameter specifies the localized version of the [field]#action# field, based on the user's preferred languages.
@@ -139,7 +140,7 @@ user.bulk.create
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.type# [type]#[String]#::
 The event type, this value will always be `user.bulk.create`.
@@ -176,7 +177,7 @@ user.create
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.tenantId# [type]#[UUID]# [since]#Available Since 1.8.0#::
 The unique tenant identifier. This value may not be returned if not applicable.
@@ -213,7 +214,7 @@ user.update
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.original# [type]#[Object]#::
 The user before the update occurred, this is the old version of the user. See the link:../apis/users[Users API] for property definitions and example JSON.
@@ -255,7 +256,7 @@ user.deactivate
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.tenantId# [type]#[UUID]# [since]#Available Since 1.8.0#::
 The unique tenant identifier. This value may not be returned if not applicable.
@@ -293,7 +294,7 @@ user.reactivate
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.tenantId# [type]#[UUID]# [since]#Available Since 1.8.0#::
 The unique tenant identifier. This value may not be returned if not applicable.
@@ -331,7 +332,7 @@ user.delete
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.tenantId# [type]#[UUID]# [since]#Available Since 1.8.0#::
 The unique tenant identifier. This value may not be returned if not applicable.
@@ -373,7 +374,7 @@ user.email.verified
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.tenantId# [type]#[UUID]# [since]#Available Since 1.8.0#::
 The unique tenant identifier. This value may not be returned if not applicable.
@@ -421,7 +422,7 @@ The type of authentication used in the login request.
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.tenantId# [type]#[UUID]# [since]#Available Since 1.8.0#::
 The unique tenant identifier. This value may not be returned if not applicable.
@@ -469,7 +470,7 @@ The type of authentication used in the login request.
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.tenantId# [type]#[UUID]# [since]#Available Since 1.8.0#::
 The unique tenant identifier. This value may not be returned if not applicable.
@@ -511,7 +512,7 @@ user.password.breach
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.tenantId# [type]#[UUID]#::
 The unique tenant identifier. This value may not be returned if not applicable.
@@ -556,7 +557,7 @@ The unique Id of the Application for which the user has now been registered.
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.registration# [type]#[Object]#::
 The user registration that has been created. See the link:../apis/registrations[Registration API] for property definitions and example JSON.
@@ -604,7 +605,7 @@ The unique Id of the Application for which the user registration has been update
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.original# [type]#[Object]#::
 The original registration prior to being updated. See the link:../apis/registrations[Registration API] for property definitions and example JSON.
@@ -656,7 +657,7 @@ The unique Id of the Application for which the user's registration has been dele
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.registration# [type]#[Object]#::
 The user registration that has been deleted. See the link:../apis/registrations[Registration API] for property definitions and example JSON.
@@ -704,7 +705,7 @@ The unique Id of the Application for which the user registration has been update
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.registration# [type]#[Object]#::
 The user registration that has been verified. See the link:../apis/registrations[Registration API] for property definitions and example JSON.
@@ -748,7 +749,7 @@ A list of Application Ids that may have been affected by a configuration change 
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.tenantId# [type]#[UUID]# [since]#Available Since 1.8.0#::
 The unique tenant identifier. This value may not be returned if not applicable.
@@ -763,6 +764,59 @@ The event type, this value will always be `jwt.public-key.update`.
 .Example Event JSON
 ----
 include::docs/src/json/events/jwt-public-key-update.json[]
+----
+
+== JWT Refresh
+
+[NOTE.since]
+====
+This event has been available since 1.16.0
+====
+
+This event is generated when an access token is refreshed using a refresh token.
+This event is initiated from both the link:../oauth/endpoints#refresh-token-grant-request[OAuth2 Refresh Token Grant], and the link:../apis/jwt#refresh-a-jwt[Refresh a JWT API].
+
+
+[source,shell]
+.Event type
+----
+jwt.refresh
+----
+
+==== Event Body
+
+[.api]
+[field]#event.applicationId# [type]#[UUID]#::
+The unique Id of the Application for which the token provides access.
+
+[field]#event.createInstant# [type]#[Long]#::
+The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
+
+[field]#event.id# [type]#[UUID]#::
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+
+[field]#event.original# [type]#[String]#::
+The original encoded access token which was provided on the JWT refresh request.  This field will be omitted if the [field]#token# parameter was not provided on the initiating request.
+
+[field]#event.refreshToken# [type]#[String]#::
+The refresh token which was provided on the JWT refresh request, used in refreshing the JWT.
+
+[field]#event.token# [type]#[String]#::
+The new encoded access token.
+
+[field]#event.tenantId# [type]#[UUID]#::
+The unique tenant identifier. This value may not be returned if not applicable.
+
+[field]#event.type# [type]#[String]#::
+The event type, this value will always be `jwt.refresh`.
+
+
+=== Event JSON
+
+[source,json]
+.Example Event JSON
+----
+include::docs/src/json/events/jwt-refresh.json[]
 ----
 
 == JWT Refresh Token Revoke
@@ -802,7 +856,7 @@ This map will contain a single entry for the application represented by the [fie
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.tenantId# [type]#[UUID]# [since]#Available Since 1.8.0#::
 The unique tenant identifier. This value may not be returned if not applicable.
@@ -841,7 +895,7 @@ This map will contain an entry for each application for which the user has a ref
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.tenantId# [type]#[UUID]# [since]#Available Since 1.8.0#::
 The unique tenant identifier. This value may not be returned if not applicable.
@@ -881,7 +935,7 @@ If you take the [field]#createInstant# of this event and add the number of secon
 The link:/docs/v1/tech/reference/data-types#instants[instant] that the event was generated.
 
 [field]#event.id# [type]#[UUID]#::
-The event unique Id. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
+The unique Id of the event. You may receive an event more than once based upon your transaction settings. This Id may be used to identify a duplicate event.
 
 [field]#event.tenantId# [type]#[UUID]# [since]#Available Since 1.8.0#::
 The unique tenant identifier. This value may not be returned if not applicable.
