@@ -610,9 +610,18 @@ If you will be using the Refresh Token Grant, you will make a request to the Tok
 
 include::docs/v1/tech/oauth/_authorization-header.adoc[]
 
+==== Request Cookies
+
+[.api]
+[field]#access_token# [type]#[String]# [optional]#Optional# [since]#Available Since 1.16.0#::
+The previously issued encoded access token.  When provided on the request, this value will be relayed in the related JWT Refresh webhook event within the `original` field.
+
 ==== Request Parameters
 
 [.api]
+[field]#access_token# [type]#[String]# [optional]#Optional# [since]#Available Since 1.16.0#::
+The previously issued encoded access token.  When provided on the request, this value will be relayed in the related JWT Refresh webhook event within the `original` field.
+
 [field]#client_id# [type]#[String]# [optional]#Optional#::
 The unique client identifier. The client Id is the Id of the FusionAuth Application in which you you are attempting to authenticate.
 +
@@ -640,6 +649,7 @@ The end-user verification code. This code is required if using this endpoint to 
 POST /oauth2/token HTTP/1.1
 Host: piedpiper.fusionauth.io
 Content-Type: application/x-www-form-urlencoded
+Cookie: access_token=eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCIsImtpZCI6IkFuYV91STRWbWxiMU5YVXZ0cV83SjZKZFNtTSJ9.eyJleHAiOjE1ODgzNTM0NjAsImlhdCI6MTU4ODM1MzQwMCwiaXNzIjoiZnVzaW9uYXV0aC5pbyIsInN1YiI6IjAwMDAwMDAwLTAwMDAtMDAwMS0wMDAwLTAwMDAwMDAwMDAwMCIsImF1dGhlbnRpY2F0aW9uVHlwZSI6IlBBU1NXT1JEIiwiZW1haWwiOiJ0ZXN0MEBmdXNpb25hdXRoLmlvIiwiZW1haWxfdmVyaWZpZWQiOnRydWUsInByZWZlcnJlZF91c2VybmFtZSI6InVzZXJuYW1lMCJ9.ZoIHTo3Pv0DpcELeX_wu-ZB_rd988jefZc2Ozu9_p59kttwqMm5PV8IDbgxJw9xcq9TFoNG8e_B6renoc11JC54UbiyeXBjF7EH01n9LDz-zTGqu9U72470Z4E7IPAHcyvJIBx4Mp9sgsEYAUm9Tb8ChudqNHhn6ZnXYI7Sew7CtGlu62f10wdBYGX0soYARHBv9CwhJC3-gsD2HLmqHAP_XhrpaYPNr5EAvmCHlM-JlTiEQ9bXwSc4gv-XbPQWamwy8Kcdb-g0EEAml_dC_b2CduwwYg0EoPQB3tQxzTUQzADi7K6q0CtQXv2_1VrRi6aQ4lt7v7t-Na39wGry_pA
 Accept: */*
 Content-Length: 436
 client_id=3c219e58-ed0e-4b18-ad48-f4f92793ae32&grant_type=refresh_token&refresh_token=ze9fi6Y9sMSf3yWp3aaO2w7AMav2MFdiMIi2GObrAi-i3248oo0jTQ
