@@ -35,8 +35,11 @@ include::docs/v1/tech/__general-migration-warning.adoc[]
 * There is a Test SMTP button that you can utilize during an Edit or Add Tenant operation to ensure the correct SMTP configuration.
 * Production runtime mode disables maintenance mode, database migrations must be applied manually in this runtime mode.  See the link:/docs/v1/tech/installation-guide/fusionauth-app#runtime-modes[FusionAuth App Installation Guide] documentation for reference.
 * Advanced configuration exposed for search engine type, runtime mode, and Same-Site cookie policy.  See the link:/docs/v1/tech/reference/configuration[Configuration] documentation for reference.
-* Updated default CORS configuration for clean installs, see the link:/docs/v1/tech/reference/cors#default-configuration[CORS Reference] for details.
+* JWT Refresh webhook event, issued when an access token is refreshed by refresh token, see the link:/docs/v1/tech/events-webhooks/events#jwt-refresh[Events] documentation for reference.
 * Lots more, additional release notes and documentation updates will be coming soon.
+
+=== Changes
+* Updated default CORS configuration for clean installs, see the link:/docs/v1/tech/reference/cors#default-configuration[CORS Reference] for details.
 
 === Internal
 * The FusionAuth Java runtime has been upgraded to version 14. All external Java packages such as the Java REST client and the Plugin interface are all still compiled against Java 8 so this upgrade should not impact any users.
